<resources>
    <string name="app_name">The Grind</string>
    <string name="app_name_caps">THE GRIND</string>
    <string name="slogan">the grind never stops</string>
    <string name="start">START</string>
    <string name="welcome">WELCOME!</string>
    <string name="instructions">instructions</string>
    <string name="instructions_text">Every day there will be a new question for each subject.
        You may answer the question whenever you like during that day.
        Leaderboards are tracked based on the time you take to answer correctly,
        and you only get one chance to answer for a spot on the leaderboard.
        As soon as you view the question, your time starts. \nGood luck!</string>
    <string name="close">CLOSE</string>
    <string name="daily_qs">Daily Questions</string>
    <string name="overall_lb">Overall Leaderboards</string>
    <string name="settings">Settings</string>
    <string name="general">GENERAL</string>
    <string name="enter_name_tag">Enter Preferred Name:</string>
    <string name="enter_name">Enter your name here</string>
    <string name="save">SAVE</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_answer">Answer</string>
    <string name="not_eligible">You are not eligible for a leaderboard spot</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="no_answer">Answer before submitting!</string>
    <string name="bad_answer">Please answer with a letter!</string>
    <string name="correct">Correct Answer!</string>
    <string name="your_time">Your Time:</string>
    <string name="return_questions">RETURN</string>
    <string name="leaderboard_submit_error">Your time will not be submitted to the leaderboard.</string>
    <string name="leaderboard_submit">Your time will be submitted to the leaderboard!</string>
    <string name="no_name_error">Enter a name!</string>
</resources>