<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/congrats_bg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="323dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/correct"
        android:textAlignment="center"
        android:textColor="@color/dark_purple"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="179dp"
        android:layout_height="47dp"
        android:text="@string/your_time"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_submit_msg" />

    <TextView
        android:id="@+id/time_result"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:text="00:00:00:000"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/return_questions"
        android:layout_width="274dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/return_questions"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_name" />

    <TextView
        android:id="@+id/leaderboard_submit_msg"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard_submit"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/final_name"
        android:layout_width="248dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_message" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="219dp"
        android:layout_height="20dp"
        android:text="@string/no_name_error"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/red_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_result" />
</androidx.constraintlayout.widget.ConstraintLayout>