<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/dark_purple"
        app:layout_constraintBottom_toTopOf="@+id/instruction_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="372dp"
        android:layout_height="290dp"
        android:layout_marginBottom="16dp"
        android:text="@string/instructions_text"
        android:textSize="20sp"
        android:textColor="@color/grey_purple"
        app:layout_constraintBottom_toTopOf="@+id/close_instruct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/close_instruct"
        android:layout_width="121dp"
        android:layout_height="56dp"
        android:layout_marginTop="384dp"
        android:text="@string/close"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>