<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/question_bg">

    <TextView
        android:id="@+id/subject_name"
        android:layout_width="339dp"
        android:layout_height="49dp"
        android:text="SUBJECT"
        android:textAlignment="center"
        android:textColor="@color/dark_purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="302dp"
        android:layout_height="343dp"
        android:layout_marginTop="4dp"
        android:text="the question"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eligibility" />

    <TextView
        android:id="@+id/eligibility"
        android:layout_width="272dp"
        android:layout_height="23dp"
        android:text="@string/not_eligible"
        android:textColor="@color/blue_mid"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_name" />

    <EditText
        android:id="@+id/answer_box"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enter_answer"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong_answer" />

    <Button
        android:id="@+id/submit"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:text="@string/submit"
        android:textColor="@color/off_white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_box" />

    <TextView
        android:id="@+id/wrong_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/wrong_answer"
        android:textColor="@color/red_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text" />

</androidx.constraintlayout.widget.ConstraintLayout>